<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggradient"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.naver.recognition.client.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">


        <Button
            android:id="@+id/cmdsunny"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alert_dialog_sunny" />

        <Button
            android:id="@+id/cmdcloudy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alert_dialog_cloudy" />

        <Button
            android:id="@+id/cmdrain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alert_dialog_rain" />

        <Button
            android:id="@+id/cmdsnow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alert_dialog_snow" />

        <Button
            android:id="@+id/cmddrizzle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alert_dialog_drizzle" />

        <Button
            android:id="@+id/cmdthunder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alert_dialog_thunder" />

        <Button
            android:id="@+id/cmdextreme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alert_dialog_extreme" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_voicestart"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/btn_blue"
                android:drawableLeft="@android:drawable/ic_btn_speak_now"
                android:text="@string/str_start" />
            <TextView
                android:id="@+id/txt_voiceresult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_voicestart"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:singleLine="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_direct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:background="@drawable/btn_blue"
                android:paddingBottom="10dp"
                android:text="임시 확인" />

            <Button
                android:id="@+id/btn_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:background="@drawable/btn_blue"
                android:text="수동 제어" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>